Bug 247181 - Konqueror doesn't render flash correctly
Summary: Konqueror doesn't render flash correctly
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 247833 250425 252667 254087 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-09 23:41 UTC by Tom Kijas
Modified: 2013-05-01 09:17 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (191.42 KB, application/x-compressed-tar)
2010-08-10 00:15 UTC, Tom Kijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Kijas 2010-08-09 23:41:40 UTC
Version:           4.5.0 (using KDE 4.4.95) 
OS:                Linux

Hi, flash in konqueror is quite buggy I think, sometimes it work, sometimes, when the flash adverts are on the sides of the web page and I scroll this page down, they scrolls from web page to the top and move above adress bar etc as white columns... I will upload screenshot

Reproducible: Sometimes

Steps to Reproduce:
Open some page with flash e.g. http://www.fcb.cz/book.php?kateg=1 and scroll down

Actual Results:  
flash components move above adress bar etc as white columns

Expected Results:  
flash to be bound to the page and when scrolling and flash components could be hidden (not shown - they are on top and I scroll to the bottom of the page).

OS: Linux (x86_64) release 2.6.34-02063401-generic
Compiler: cc
Comment 1 Tom Kijas 2010-08-10 00:15:45 UTC
Created attachment 49955 [details]
screenshot
Comment 2 Maksim Orlovich 2010-08-10 00:17:24 UTC
Are you using a Qt4.7 snapshot?
Comment 3 Philippe ROUBACH 2010-08-13 19:54:25 UTC
i confirm this

konqueror 4.4.3 : no pb embeded flash video are well played and all controls works (play pause, sound level)

since i have switched to 4.5.0 (qt 4.7.0) not any flash video is displayed.
sometime i have only sound
most of the time nothing
 saddly i installed again npplayer
Comment 4 Tom Kijas 2010-08-14 11:12:18 UTC
Yes, it is Qt4.7beta2 :/ should I use lower version? If I do this, it offers me to uninstall a lot of KDE packages (may be the whole KDE4.5)...
Comment 5 Maksim Orlovich 2010-08-14 17:21:37 UTC
Try to get a later 4.7 snapshot. Earlier pre-releases of Qt completely break XEmbed; later ones just break its clipping.
Comment 6 Tom Kijas 2010-08-17 00:47:21 UTC
Thanks but please where can I obtain later 4.7 snapshot? May be some repositories?
Comment 7 Tommi Tervo 2010-09-07 12:42:10 UTC
*** Bug 250425 has been marked as a duplicate of this bug. ***
Comment 8 Tommi Tervo 2010-09-15 13:34:39 UTC
*** Bug 247833 has been marked as a duplicate of this bug. ***
Comment 9 Tommi Tervo 2010-09-28 18:26:32 UTC
*** Bug 252667 has been marked as a duplicate of this bug. ***
Comment 10 Andrey Borzenkov 2010-09-28 18:32:38 UTC
(In reply to comment #5)
> Try to get a later 4.7 snapshot.

I still have similar problems with 4.5.68/Qt 4.7.0 final.
Comment 11 Thomas Zell 2010-10-01 23:10:19 UTC
Same problem here with Qt release 4.7.0 (and KDE 4.5.1)
Comment 12 Tommi Tervo 2010-10-13 20:12:40 UTC
*** Bug 254087 has been marked as a duplicate of this bug. ***
Comment 13 Philippe ROUBACH 2010-10-13 21:16:13 UTC
Mandriva 10.1 32 bit

i have no more pb with kde 4.5.2
Comment 14 Gerry Gavigan 2010-10-13 23:10:16 UTC
using opensuse I still get flash videos scrolling past frame of konqueror
Comment 15 Maksim Orlovich 2010-10-29 00:13:27 UTC
SVN commit 1190789 by orlovich:

Workaround problems with XEmbed clipping w/Qt 4.7.0

BUG:247181


 M  +1 -1      plugin_part.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1190789
Comment 16 Maksim Orlovich 2010-10-29 00:15:22 UTC
SVN commit 1190790 by orlovich:

Merged revision:r1190789 | orlovich | 2010-10-28 18:14:15 -0400 (Thu, 28 Oct 2010) | 4 lines

Workaround problems with XEmbed clipping w/Qt 4.7.0

BUG:247181

 M  +1 -1      plugin_part.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1190790
Comment 17 Thomas Zell 2011-05-08 10:18:33 UTC
This seems to be working now.
Comment 18 comet.friend 2013-05-01 09:16:25 UTC
Comment on attachment 49955 [details]
screenshot

As the bug report is old and the bug seems to be fixed according to the last post, why not mark it as RESOLVED and close it? Of course, feedback from the original reporter would be good...

Regards

Alex
Comment 19 comet.friend 2013-05-01 09:17:39 UTC
Sorry, it IS RESOLVED, I had too many windows open... Please forget my last post, and sorry for the confusion!

Alex