Workaround problems with XEmbed clipping w/Qt 4.7.0

BUG:247181

svn path=/branches/KDE/4.5/kdebase/apps/; revision=1190789